--- a/CCC.Data.Monizoring/CCC.Data.Monitoring.csproj
+++ b/CCC.Data.Monizoring/CCC.Data.Monitoring.csproj
@@ -20,6 +20,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CCC.Data.Monitoring.Data.Access\CCC.Data.Monitoring.Data.Access.csproj" />
+    <ProjectReference Include="..\CCC.Data.Monitoring.Operations\CCC.Data.Monitoring.Operations.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
