--- a/CCC.Data.Monitoring.Concrete/CCC.Data.Monitoring.Concrete.csproj
+++ b/CCC.Data.Monitoring.Concrete/CCC.Data.Monitoring.Concrete.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
